using System.Collections;
using TMPro;
using UnityEngine;

public class BossEnemyAI : MonoBehaviour
{
    [Header("Hedef ve Referanslar")]
    public Transform player;

    // Bï¿½LEï¿½ENLER
    private Rigidbody2D rb;          // Parent'ta
    private Collider2D myCollider;   // Parent'ta
    private Animator anim;           // Child'da (Boss_Sprite)

    [Header("Boss ï¿½statistikleri")]
    public float maxHealth = 500f;
    public float currentHealth;
    public float moveSpeed = 2.5f;

    [Header("Mesafe Ayarlarï¿½")]
    public float chaseDist = 5f;    // Takip Mesafesi (Bï¿½yï¿½ttï¿½m)
    public float spellDist = 3f;     // Bï¿½yï¿½ Mesafesi
    public float attackDist = 1f;  // Yakï¿½n Vuruï¿½ (Collider bï¿½yï¿½dï¿½ï¿½ï¿½ iï¿½in bunu da artï¿½rdï¿½k)
    public float stopDist = 0.8f;    // Durma mesafesi

    [Header("Bekleme Sï¿½releri")]
    public float attackCooldown = 2f;
    public float spellCooldown = 4f;
    public float healCooldown = 15f;
    public int meleeDamage = 15;
    public int spellDamage = 10;
    public int healAmount = 30;

    [Header("Gï¿½rsel Ayarlar")]
    public Transform visualChild; // Boss_Sprite objesi (Inspector'dan atayacaï¿½ï¿½z)
    public bool spriteYonuTers = false;

    // Durumlar
    private bool isDead = false;
    private bool isBusy = false;
    private float nextAttackTime = 0f;
    private float nextSpellTime = 0f;
    private float nextHealTime = 0f;

    public TMP_Text deathTex;

    private int lastDirection = 1;
    private float flipDeadzone = 0.2f; // kÃ¼Ã§Ã¼k mesafelerde flip olmasÄ±n


    public Player_Script playerScript;
    public GameObject attackHitbox;

    private AudioSource audioSource;
    public AudioClip YouDied_Sound;

    void Awake()
    {
        // Parent ï¿½zerindekiler
        rb = GetComponent<Rigidbody2D>();
        myCollider = GetComponent<Collider2D>();

        // Child ï¿½zerindeki Animator'ï¿½ bul (ï¿½NEMLï¿½ Dï¿½ZELTME)
        anim = GetComponentInChildren<Animator>();

        currentHealth = maxHealth;

        // Gï¿½rsel child objeyi otomatik bulmaya ï¿½alï¿½ï¿½alï¿½m (Flip iï¿½in lazï¿½m)
        if (visualChild == null && transform.childCount > 0)
        {
            visualChild = transform.GetChild(0);
        }

        // Hata Kontrolï¿½
        if (anim == null) Debug.LogError("HATA: Boss_Sprite ï¿½zerinde Animator bulunamadï¿½!");
        if (myCollider == null) Debug.LogError("HATA: BossEnemy ï¿½zerinde Collider yok!");

        audioSource = GetComponent<AudioSource>();
    }

    void Start()
    {
        playerScript = FindObjectOfType<Player_Script>();
        if (player == null)
        {
            GameObject p = GameObject.FindGameObjectWithTag("Player");
            if (p != null)
            {
                player = p.transform;
                // player script genelde root'ta olur, bunu kullan:
                playerScript = p.GetComponent<Player_Script>();
            }
        }

        // Hitbox baÅŸlangÄ±Ã§ta kapalÄ± olsun
        if (attackHitbox != null) attackHitbox.SetActive(false);

        // lastDirection'Ä± gÃ¶rsel scale'den tÃ¼ret (negatifse -1 olsun)
        if (visualChild != null)
            lastDirection = visualChild.localScale.x >= 0 ? 1 : -1;
    }


    void Update()
    {
        if (isDead || player == null) return;
        if (isBusy) { StopMovement(); return; }

        // MESAFE ï¿½Lï¿½ï¿½Mï¿½ (Collider merkezinden)
        float dist = Vector2.Distance(myCollider.bounds.center, player.position);

        // Yï¿½n Hesabï¿½
        int direction = (player.position.x > transform.position.x) ? 1 : -1;

        // --- YAPAY ZEKA ---

        // 1. Can Basma
        if (!isBusy && currentHealth < (maxHealth * 0.4f) && Time.time >= nextHealTime)
        {
            StartCoroutine(ActionRoutine("cast", 1.5f, () =>
            {
                currentHealth += healAmount;
                if (currentHealth > maxHealth) currentHealth = maxHealth;
                nextHealTime = Time.time + healCooldown;
            }));
        }

        // 2. Yakï¿½n Saldï¿½rï¿½
        else if (dist <= attackDist)
        {
            StopMovement();
            FacePlayer(direction);
            if (Time.time >= nextAttackTime)
            {
                StartCoroutine(ActionRoutine("attack", 0.6f, () => {
                    // Hasar ver
                    if (playerScript != null)
                    {
                        Debug.Log("BOSS PLAYER'A HASAR VERDÄ°: " + meleeDamage);
                        playerScript.TriggerHurt(meleeDamage);
                    }
                    else
                    {
                        Debug.LogError("playerScript NULL! Boss hasar veremiyor");
                    }

                }));
                nextAttackTime = Time.time + attackCooldown;
            }
        }
        // 3. Bï¿½yï¿½ Atma (Spell)
        else if (dist <= spellDist && dist > attackDist)
        {
            StopMovement();
            FacePlayer(direction);
            if (Time.time >= nextSpellTime)
            {
                StartCoroutine(ActionRoutine("spell", 0.8f, () => {
                    // Uzaktan hasar
                    if (playerScript != null) playerScript.TriggerHurt(spellDamage);
                }));
                nextSpellTime = Time.time + spellCooldown;
            }
            else if (dist > stopDist) // Cooldown'daysa boï¿½ durma yï¿½rï¿½
            {
                MoveToPlayer(direction);
            }
        }
        // 4. Takip
        else if (dist <= chaseDist && dist > stopDist)
        {
            MoveToPlayer(direction);
        }
        else
        {
            StopMovement();
        }

    }

    void MoveToPlayer(int dir)
    {
        audioSource.PlayOneShot(YouDied_Sound);
        anim.SetBool("walk", true);
        FacePlayer(dir);
        rb.linearVelocity = new Vector2(dir * moveSpeed, rb.linearVelocity.y);
    }

    void StopMovement()
    {
        rb.linearVelocity = new Vector2(0, rb.linearVelocity.y);
        anim.SetBool("walk", false);
    }

    void FacePlayer(int direction)
    {
        // Sadece Child objeyi (Gï¿½rseli) ï¿½eviriyoruz
        if (visualChild != null)
        {
            Vector3 scale = visualChild.localScale;
            // ï¿½ï¿½areti kontrol et
            if (direction > 0) scale.x = Mathf.Abs(scale.x) * (spriteYonuTers ? -1 : 1);
            else scale.x = -Mathf.Abs(scale.x) * (spriteYonuTers ? -1 : 1);

            visualChild.localScale = scale;
        }
    }

    // Genel Aksiyon Yï¿½neticisi (Attack, Spell, Heal iï¿½in tek fonksiyon)
    IEnumerator ActionRoutine(string triggerName, float delay, System.Action onActionExecute)
    {
        isBusy = true;
        anim.SetTrigger(triggerName);
        StopMovement();

        // ðŸ”´ Animasyonun vurma anÄ±na kadar bekle
        yield return new WaitForSeconds(delay);

        // ðŸ”¥ TAM BURASI
        if (triggerName == "attack")
        {
            Debug.Log("BOSS ATTACK ANIM - HITBOX AÃ‡ILDI");
            attackHitbox.SetActive(true);
        }

        // VURUÅž ANI
        yield return new WaitForSeconds(0.1f);

        if (triggerName == "attack")
            attackHitbox.SetActive(false);

        // Spell / heal vs iÃ§in
        onActionExecute?.Invoke();

        yield return new WaitForSeconds(0.4f);
        isBusy = false;
    }



    public void TakeDamage(int damage)
    {
        Debug.Log("BOSS DAMAGE: " + damage + " | CAN Ã–NCE: " + currentHealth);

        if (isDead) return;

        currentHealth -= damage;

        Debug.Log("BOSS CAN SONRA: " + currentHealth);

        if (!isBusy)
        {
            anim.SetTrigger("hurt");
            StopMovement();
        }

        if (currentHealth <= 0)
        {
            Debug.Log("BOSS DIE Ã‡AÄžRILDI");
            Die();
        }
    }


    void Die()
    {
        if (isDead) return; // Zaten Ã¶lÃ¼yse tekrar Ã¶ldÃ¼rme

        isDead = true;
        isBusy = true;
        GetComponent<Collider2D>().enabled = false;
        rb.gravityScale = 0;
        rb.linearVelocity = Vector2.zero;
        deathTex.gameObject.SetActive(true);
        Debug.Log("BOSS Ã–LDÃœ - Animasyon BaÅŸlÄ±yor");
        anim.SetTrigger("death");

        Destroy(gameObject, 1f);

    }

    void OnDrawGizmos()
    {
        // Gizmos artï¿½k Collider merkezinden ï¿½iziliyor, gï¿½rselle uyumlu olacak
        if (GetComponent<Collider2D>() != null)
        {
            Vector3 center = GetComponent<Collider2D>().bounds.center;
            Gizmos.color = Color.green; Gizmos.DrawWireSphere(center, chaseDist);
            Gizmos.color = Color.blue; Gizmos.DrawWireSphere(center, spellDist);
            Gizmos.color = Color.red; Gizmos.DrawWireSphere(center, attackDist);
        }
    }
}